--- a/index.html
+++ b/index.html
@@ -2,78 +2,116 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For My Valentine</title>
+<title>For My Beast Boy</title>
+
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        max-width: 700px;
-        margin: 40px auto;
-        padding: 0 20px;
-        background-color: #fff0f5;
-        color: #333;
+body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(to bottom, #ffd6e7, #fff0f5);
+    font-family: Georgia, serif;
+    overflow: hidden;
+}
+
+/* Floating hearts */
+.heart {
+    position: absolute;
+    color: #ff4d88;
+    font-size: 20px;
+    animation: float 10s linear infinite;
+    opacity: 0.7;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(100vh);
+        opacity: 0;
     }
-    h2 {
-        color: #d6336c;
-        margin-top: 40px;
+    20% {
+        opacity: 0.8;
     }
-    p {
-        margin-bottom: 20px;
+    100% {
+        transform: translateY(-10vh);
+        opacity: 0;
     }
+}
+
+/* Center the envelope */
+.container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+/* Envelope style */
+.envelope {
+    width: 520px;
+    background: #fffaf5;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0px 15px 30px rgba(0,0,0,0.2);
+    max-height: 80vh;
+    overflow-y: auto;
+    border: 2px solid #ffc0cb;
+}
+
+/* Letter text */
+p {
+    line-height: 1.7;
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 18px;
+}
 </style>
 </head>
+
 <body>
 
-<h2>Intro</h2>
-<p>You’ve asked me numerous times why I love you, what makes you different from other guys, and after prolonging it for so long, I thought it was time to tell you now.</p>
+<!-- Floating hearts -->
+<div class="heart" style="left:10%; animation-delay:0s;">♥</div>
+<div class="heart" style="left:20%; animation-delay:2s;">♥</div>
+<div class="heart" style="left:30%; animation-delay:4s;">♥</div>
+<div class="heart" style="left:40%; animation-delay:1s;">♥</div>
+<div class="heart" style="left:60%; animation-delay:3s;">♥</div>
+<div class="heart" style="left:70%; animation-delay:5s;">♥</div>
+<div class="heart" style="left:80%; animation-delay:2s;">♥</div>
+<div class="heart" style="left:90%; animation-delay:6s;">♥</div>
 
-<h2>How You Listen and Respect Me</h2>
-<p>One of the reasons why I love you is because you listen to me when I talk. You make me feel seen. You make me feel heard. You actually respond when I talk to you about something and you actually try to make a difference and change certain habits. You respect me. You don’t put me down. You always compliment me. You fill me with love. You always reassure me. You make sure that I don’t get any second guesses. You don’t give me time to doubt how you feel because of the amount of times that you tell me that you love me.</p>
+<div class="container">
+<div class="envelope">
 
-<h2>How You Make Me Feel</h2>
-<p>When I’m with you I don’t feel so stressed. I feel happier. I’m not as depressed anymore. I feel safe and chosen.</p>
+<p>You have asked me numerous times why I love you and what makes you different from other guys, and after prolonging it for so long, I thought it was time to tell you now.</p>
 
-<h2>Consistency and Long-Term Effort</h2>
-<p>You’re very consistent with everything that you do, especially when it comes to me. Like when you were pursuing me — I mean seven years is a lot — and for you to just always be honest about your feelings, it’s really nice.</p>
+<p>One of the reasons why I love you is because you listen to me when I talk. You make me feel seen. You make me feel heard. You actually respond when I talk to you about something, and you actually try to make a difference and change certain habits. You respect me. You do not put me down. You always compliment me and fill me with love. You always reassure me and make sure I do not get any second guesses. You do not even give me time to have second guesses because of the amount of times you tell me that you love me.</p>
 
-<h2>Your Character and Personality</h2>
-<p>One thing that I really love about your character is that you’re kind in a way that’s very cringe and corny, but I love it. You’re genuine about your feelings for me.</p>
+<p>When I am with you, I do not feel so stressed. I feel happier. I am not as depressed anymore. I feel safe and chosen. You are very consistent with everything that you do, especially when it comes to me. Even when you were pursuing me, seven years is a long time, and for you to always be there and let it be known how you felt about me meant a lot.</p>
 
-<h2>Long Distance Effort</h2>
-<p>You make that very clear with us being in a long-distance relationship. Even when you’re busy, you make time for me. You always text me first thing in the morning. If we don’t talk all day, you’re gonna make time for us to talk even if it’s late at night. You always call me. You always text me.</p>
+<p>One thing that I really love about your character is that you are kind in a way that is very cringe and corny, but I love it. You are genuine about your feelings for me and you make that very clear. You are okay with us being long distance, and even when you are busy, you still make time for me. You always text me first thing in the morning. If we do not talk all day, you still make sure we talk, even if it is late at night. You call me. You check on me. You make the effort.</p>
 
-<h2>What Makes You Different</h2>
-<p>What makes you different from other people and other men is the fact that you don’t just give generic compliments or generic answers. When I ask you something specific, you actually go into detail about how you love me, why you love me, and what you love about me. You answer all of my silly questions. Unlike other men, you aren’t overly sexual or focused on that in every conversation, and you never make me feel uncomfortable.</p>
+<p>What makes you different from other people and other men is that you do not give me generic compliments or generic answers. When I ask you specific questions, you go into detail about why you love me and what you love about me. You answer all of my random questions, even the ones that might seem silly. You are not overly sexual, and you do not make every conversation about that. You never make me feel uncomfortable.</p>
 
-<h2>Respecting Boundaries</h2>
-<p>I also love the fact that when we talked and I said I felt like things were moving a bit too fast, you actually slowed down, listened to me, and made sure I was comfortable with everything you were doing.</p>
+<p>I also love that when I told you I felt like things were moving too fast, you slowed down. You listened to me and made sure I was comfortable with everything. That meant a lot to me.</p>
 
-<h2>Our History Together</h2>
-<p>We’ve been friends for a very long time — since seventh grade. I’m now a sophomore in college, and our friendship stayed close until Christmas Eve last year when we officially started dating. That history makes our relationship feel really special.</p>
+<p>We have been friends for a very long time. We have known each other since seventh grade, and now I am a sophomore in college. Our friendship has always been close, and then on Christmas Eve last year, we officially became something more. That history means a lot to me.</p>
 
-<h2>Your Growth and Change</h2>
-<p>The main thing for me is that you’re willing to change for the better. You had some bad habits before, but now you actually care about other people’s feelings. You’re not manipulative anymore. You actually try to be a better person, and you show that you don’t just talk about it — you actually do it.</p>
+<p>Another big reason why I love you is because you are willing to change for the better. You had habits and ways about you that were not always the best, but you worked on them. You became more mindful of other people's feelings. You think before you speak. You do not just say you will do better. You actually try, and you actually show it.</p>
 
-<h2>Our Dynamic and Playfulness</h2>
-<p>I love that we crack jokes on each other, that we’re lovable with each other. Even if it’s corny, we fake-argue sometimes, but then we go back to being lovey-dovey.</p>
+<p>I love that we can joke with each other, fake argue, be playful, and then go right back to being all lovey and soft with each other, even if it is corny. I love how kind you are and how special you make me feel.</p>
 
-<h2>Nicknames and Affection</h2>
-<p>I also love the little things that are just ours, like the crazy nicknames you give me. Coconut Locks, Cherry Blood Blossom, Sugar Dumpling, and even my “gorgeous buried lemon cocoa fried dumpling cake” — all of them always make me smile. They’re funny, a little ridiculous, and so clearly you. I love that we have our own special way of being playful and affectionate.</p>
+<p>I also love your imperfections, even the ones you used to be insecure about. Your skin, your height, everything. None of that bothers me.</p>
 
-<h2>Loving Your Imperfections</h2>
-<p>I love that you’re kind and that you make me feel special. Even as a little tiny boy that you are, you make me feel great. I also love all of your imperfections that you used to be insecure about. I don’t know, I just really like it. I understand that you have skin issues, and I’m okay with that. It’s okay — we all have blemishes and little things we’re insecure about. Even with you being shorter than me — I don’t mind being taller than you. I hope you don’t mind me being taller because I kinda like wearing heels. I don’t want to make you feel more self-conscious about being with me.</p>
+<p>You have helped me make better decisions since being in college. I spend more time focusing on myself, on my space, and on us. When something is bothering me, I know I can come to you. Even if I cannot open up right away, you are patient and you wait until I am ready.</p>
 
-<h2>Positive Influence on My Life</h2>
-<p>You’ve helped me make better decisions since being in college. I haven’t really been to any parties. I only drink. I don’t hang around bad company anymore. I stay in my room and enjoy our time, being there for myself, being there for you, being a support for others, and knowing that you support me too. When I have issues, I can go to you, even if it’s awkward, and you’re understanding. You wait until I’m actually ready to talk about everything entirely.</p>
+<p>I notice the little things. The effort. The small changes. You are human and you still make mistakes, but you learn from them.</p>
 
-<h2>Noticing the Little Things</h2>
-<p>I just want you to know that I notice the little things that you do — the small shifts in energy, the little things you do to make us better. I like that you’re still you. You’re human, you still make mistakes, but you learn from them instead of using them as an excuse to act negatively.</p>
+<p>And I love the way you love me. The nicknames you give me like coconut locks, cherry blossom, sugar dumpling, and all the other crazy names you come up with.</p>
 
-<h2>Closing Message</h2>
-<p>And most importantly, I’m just really grateful for you, for us, and for everything we’re building together. <br>
-Happy Valentine’s Day, Beast Boy. <br>
-I love you ❤️</p>
+<p>That is what makes you different. That is why I love you, Beast Boy.</p>
+
+</div>
+</div>
 
 </body>
 </html>
