--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ p {
         <div class="flap"></div>
 
         <!-- Change this name if you want -->
-        <div class="name">For Beast Boy🫶</div>
+        <div class="name">For Beast Boy💗</div>
 
         <div class="letter">
             
