--- a/index.html
+++ b/index.html
@@ -2,157 +2,109 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For Beast Boy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Valentine Letter</title>
 
 <style>
 body {
     margin: 0;
-    height: 100vh;
-    background: linear-gradient(to bottom, #ffd6e7, #fff0f5);
+    padding: 0;
+    background: linear-gradient(to bottom, #ffe6f0, #fff);
     font-family: Georgia, serif;
-    overflow: hidden;
-}
-
-/* Floating hearts in background */
-.bg-heart {
-    position: absolute;
-    color: #ff4d88;
-    font-size: 20px;
-    animation: float 10s linear infinite;
-    opacity: 0.6;
-}
-
-@keyframes float {
-    0% { transform: translateY(100vh); opacity: 0; }
-    20% { opacity: 0.8; }
-    100% { transform: translateY(-10vh); opacity: 0; }
-}
-
-/* Center container */
-.container {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
+}
+
+/* Floating background hearts */
+.heart-bg {
+    position: absolute;
+    color: #ff4d88;
+    animation: float 6s infinite linear;
+    opacity: 0.5;
+}
+
+@keyframes float {
+    from { transform: translateY(100vh); }
+    to { transform: translateY(-10vh); }
 }
 
 /* Envelope */
 .envelope {
-    width: 520px;
-    height: 300px;
-    background: #ffccd5;
+    width: 320px;
+    height: 220px;
+    background: #ff6699;
     position: relative;
     cursor: pointer;
-    box-shadow: 0 15px 30px rgba(0,0,0,0.2);
-    border-radius: 10px;
-    transition: height 0.7s ease;
-}
-
-/* Flap */
-.flap {
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    background: #ffb3c6;
-    clip-path: polygon(0 0, 50% 100%, 100% 0);
-    transform-origin: top;
-    transition: transform 0.7s ease;
-}
-
-/* Name on envelope */
-.name {
-    position: absolute;
-    bottom: 50px;
-    width: 100%;
+    border-radius: 6px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    font-size: 26px;
-    color: #cc3366;
+    color: white;
+    font-size: 20px;
     font-weight: bold;
 }
 
-.subname {
-    font-size: 16px;
-    margin-top: 5px;
+/* Envelope flap */
+.envelope::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 160px solid transparent;
+    border-right: 160px solid transparent;
+    border-bottom: 110px solid #ff4d88;
+    transition: transform 0.6s;
+    transform-origin: top;
 }
 
-/* Click text */
-.click-text {
-    position: absolute;
-    bottom: 15px;
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    color: #cc3366;
+.open::before {
+    transform: rotateX(180deg);
 }
 
 /* Letter */
 .letter {
     position: absolute;
-    top: 40px;
+    top: 20px;
     left: 20px;
-    right: 20px;
-    bottom: 20px;
-    background: #fffaf5;
-    padding: 25px;
+    width: 280px;
+    height: 380px;
+    background: white;
+    border-radius: 8px;
+    padding: 20px;
     overflow-y: auto;
-    border-radius: 6px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.2);
     opacity: 0;
-    transition: opacity 0.6s ease;
-}
-
-/* Valentine message that appears when opened */
-.valentine-message {
-    position: absolute;
-    top: 10px;
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-    color: #cc3366;
-    opacity: 0;
-    transition: opacity 0.6s ease;
-}
-
-/* Paragraph style */
-p {
+    transform: translateY(40px);
+    transition: all 0.6s;
+    font-size: clamp(18px, 4vw, 20px);
     line-height: 1.7;
-    font-size: 15px;
     color: #333;
-    margin-bottom: 16px;
 }
 
-/* Open state */
-.envelope.open {
-    height: 80vh;
-}
-
-.envelope.open .flap {
-    transform: rotateX(180deg);
-}
-
-.envelope.open .letter {
+.open .letter {
     opacity: 1;
-}
-
-.envelope.open .valentine-message {
-    opacity: 1;
+    transform: translateY(-240px);
 }
 
 /* Heart explosion */
 .explosion-heart {
     position: absolute;
-    color: #ff3366;
-    font-size: 18px;
-    pointer-events: none;
-    animation: explode 1s ease-out forwards;
+    color: #ff1a66;
+    font-size: 20px;
+    animation: explode 1s forwards;
 }
 
 @keyframes explode {
-    0% {
-        transform: translate(0,0) scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(var(--x), var(--y)) scale(0.5);
+    from { transform: translate(0,0); opacity: 1; }
+    to {
+        transform: translate(var(--x), var(--y));
         opacity: 0;
     }
 }
@@ -161,86 +113,82 @@ p {
 
 <body>
 
-<!-- Floating hearts -->
-<div class="bg-heart" style="left:10%; animation-delay:0s;">♥</div>
-<div class="bg-heart" style="left:30%; animation-delay:2s;">♥</div>
-<div class="bg-heart" style="left:50%; animation-delay:4s;">♥</div>
-<div class="bg-heart" style="left:70%; animation-delay:1s;">♥</div>
-<div class="bg-heart" style="left:90%; animation-delay:3s;">♥</div>
+<!-- Background floating hearts -->
+<script>
+for (let i = 0; i < 20; i++) {
+    let heart = document.createElement("div");
+    heart.className = "heart-bg";
+    heart.innerHTML = "❤";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = (4 + Math.random() * 4) + "s";
+    heart.style.fontSize = (12 + Math.random() * 18) + "px";
+    document.body.appendChild(heart);
+}
+</script>
 
-<div class="container">
-    <div class="envelope" onclick="toggleEnvelope(this)">
+<div class="envelope" id="envelope" onclick="toggleEnvelope()">
+    For My Love
+    <div class="letter">
+        <p>
+You’ve asked me numerous times why I love you and what makes you different from other guys, and after prolonging it for so long, now’s that time.
+        </p>
 
-        <div class="flap"></div>
+        <p>
+One of the reasons why I love you is because you take time to actually listen when we talk. You make me feel seen, and heard. When I address certain habits that I don’t like, instead of coming up with excuses for them, you make an effort to change. I know that changing a certain mindset or habit that you’ve had for so long is hard and although we may have some setbacks I do appreciate your efforts to change especially the fact that you don’t just say you’re going to do better, you actually try. You respect me, don’t put me down, compliment me, and fill me with love. You’re reassuring and don’t leave any space for doubt.
+        </p>
 
-        <!-- Front text -->
-        <div class="name">
-            For Beast Boy
-            <div class="subname">From your Coconut Locs</div>
-        </div>
+        <p>
+When I’m with you I’m no longer stressed or depressed, I feel happier, safe, and chosen. I find your consistency to be meaningful considering the fact that you’ve liked me so long and made it known.
+        </p>
 
-        <div class="click-text">Click to open</div>
+        <p>
+One thing I really love about your character is your creativity when it comes to being cringy and corny even with the nicknames you give me like coconut locs, sugar dumpling, cherry blood blossom and all the other crazy names you come up with, is your way loving me and it means a lot to me. You are genuine about your feelings for me and you never fail to make that clear. Even with us being in a long distance relationship and you being so busy with work, you still make time for me even if that means losing sleep. You always text me when you wake up and if we haven’t talked during the day, you’d make time at night.
+        </p>
 
-        <!-- Message that appears when opened -->
-        <div class="valentine-message">
-            Happy Valentine’s Day ❤️
-        </div>
+        <p>
+What makes you different from other men is that you’re not generic. When I ask you questions, you don’t respond vaguely rather, you’d go into detail about the whole shebang. You answer all of my random questions no matter how ridiculous they may be. You’re not someone that makes me uncomfortable and you don’t make every conversation we have sexual. There’s also this thing about timing with you that I still can’t figure out. Throwback to last year when I had thoughts about our relationship moving too fast, you messaged me asking if I felt as though the relationship was moving too fast or if it was at a reasonable pace for me. See now the fact that you asked that question the same time that I was thinking about it really caught me off guard and when I responded, instead of being weird about it, you decided become a lil philosopher with that “we gin walk from Alaska to Carmichael” analogy.
+        </p>
 
-        <!-- Letter -->
-        <div class="letter">
+        <p>
+I love that we can joke with each other, you wouldn’t be offended when I call you certain names or when we fake argue. I love how kind you are and how special you make me feel. I love every part of you, even the parts you used to be insecure about. None of those things change how I see you. Although society sometimes makes it seem weird for a tall girl and a not so tall guy to be together, I don’t see anything wrong with. As someone who hated being tall you’ve encouraged me to embrace my height instead of putting me down.
+        </p>
 
-<p>You’ve asked me numerous times why I love you and what makes you different from other guys, and after prolonging it for so long, now’s that time.</p>
+        <p>
+You’ve helped me in my decision making since being college. I am not who I once was when I first came to central, I don’t go to parties anymore or hang around people that encourage bad habits. Since then I’ve spent more time focusing on myself, my space, and our time together. We support each other, and I know that when something’s bothering me, I can come to you. Even if it’s hard for me to open up immediately, you’re patient and wait until I’m ready.
+        </p>
 
-<p>One of the reasons why I love you is because you take time to actually listen when we talk. You make me feel seen, and heard. When I address certain habits that I don’t like, instead of coming up with excuses for them, you make an effort to change. I know that changing a certain mindset or habit that you’ve had for so long is hard and although we may have some setbacks I do appreciate your efforts to change especially the fact that you don’t just say you’re going to do better, you actually try. You respect me, don’t put me down, compliment me, and fill me with love. You’re reassuring and don’t leave any space for doubt.</p>
+        <p>
+I also want you to know that I do notice everything. The small changes, effort, and even the way your energy shifts when something matters to me. I see it and I know I don’t always give flowers when it’s due but I do appreciate it.
+        </p>
 
-<p>When I’m with you I’m no longer stressed or depressed, I feel happier, safe, and chosen. I find your consistency to be meaningful considering the fact that you’ve liked me so long and made it known.</p>
+        <p>
+Cheers to our first Valentine’s Day and I pray we have many more.
+        </p>
 
-<p>One thing I really love about your character is your creativity when it comes to being cringy and corny even with the nicknames you give me like coconut locs, sugar dumpling, cherry blood blossom and all the other crazy names you come up with. That is your way of loving me and it means a lot to me. You are genuine about your feelings for me and you never fail to make that clear. Even with us being in a long distance relationship and you being so busy with work, you still make time for me even if that means losing sleep. You always text me when you wake up and if we haven’t talked during the day, you’d make time at night.</p>
-
-<p>What makes you different from other men is that you’re not generic. When I ask you questions, you don’t respond vaguely, rather you go into detail about the whole shebang. You answer all of my random questions no matter how ridiculous they may be. You’re not someone that makes me uncomfortable and you don’t make every conversation we have sexual. There’s also this thing about timing with you that I still can’t figure out. Throwback to last year when I had thoughts about our relationship moving too fast, you messaged me asking if I felt as though the relationship was moving too fast or if it was at a reasonable pace for me. The fact that you asked that question at the same time that I was thinking about it really caught me off guard and when I responded, instead of being weird about it, you decided to become a little philosopher with that “we gon walk from Alaska to Carmichael” analogy.</p>
-
-<p>I love that we can joke with each other, that you don’t get offended when I call you certain names or when we fake argue. I love how kind you are and how special you make me feel. I love every part of you, even the parts you used to be insecure about. None of those things change how I see you. Although society sometimes makes it seem weird for a tall girl and a not so tall guy to be together, I don’t see anything wrong with it. As someone who used to hate being tall, you’ve encouraged me to embrace my height instead of putting me down.</p>
-
-<p>You’ve helped me with my decision making since being in college. I am not who I once was when I first came to Central. I don’t go to parties anymore or hang around people that encourage bad habits. Since then I’ve spent more time focusing on myself, my space, and our time together. We support each other, and I know that when something’s bothering me, I can come to you. Even if it’s hard for me to open up immediately, you’re patient and you wait until I’m ready.</p>
-
-<p>I also want you to know that I do notice everything. The small changes, the effort, and even the way your energy shifts when something matters to me. I see it and I know I don’t always give flowers when it’s due, but I do appreciate it.</p>
-
-<p>Cheers to our first Valentine’s Day and I pray we have many more.</p>
-
-<p>I love you, my gremlin. ❤️</p>
-
-<p><strong>Forever your Sugar Dumpling,<br>Happy Valentine’s Day ❤️</strong></p>
-
-        </div>
+        <p>
+I love you, my gremlin. ❤️
+        </p>
     </div>
 </div>
 
 <script>
-function toggleEnvelope(element) {
-    element.classList.toggle("open");
-    if (element.classList.contains("open")) {
-        createHeartExplosion(element);
-    }
-}
+function toggleEnvelope() {
+    const envelope = document.getElementById("envelope");
+    envelope.classList.toggle("open");
 
-function createHeartExplosion(envelope) {
-    for (let i = 0; i < 30; i++) {
-        let heart = document.createElement("div");
-        heart.className = "explosion-heart";
-        heart.innerHTML = "♥";
+    if (envelope.classList.contains("open")) {
+        for (let i = 0; i < 25; i++) {
+            let heart = document.createElement("div");
+            heart.className = "explosion-heart";
+            heart.innerHTML = "❤";
+            heart.style.left = "50%";
+            heart.style.top = "50%";
+            heart.style.setProperty("--x", (Math.random() * 400 - 200) + "px");
+            heart.style.setProperty("--y", (Math.random() * -400) + "px");
+            document.body.appendChild(heart);
 
-        let x = (Math.random() - 0.5) * 500 + "px";
-        let y = (Math.random() - 0.5) * 500 + "px";
-
-        heart.style.setProperty("--x", x);
-        heart.style.setProperty("--y", y);
-
-        heart.style.left = envelope.offsetWidth / 2 + "px";
-        heart.style.top = envelope.offsetHeight / 2 + "px";
-
-        envelope.appendChild(heart);
-
-        setTimeout(() => heart.remove(), 1000);
+            setTimeout(() => heart.remove(), 1000);
+        }
     }
 }
 </script>
