--- a/index.html
+++ b/index.html
@@ -3,87 +3,141 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Letter</title>
+<title>For My Darling</title>
 
 <style>
 body {
     margin: 0;
-    padding: 20px;
+    height: 100vh;
     background: #ffe6f0;
-    font-family: Georgia, serif;
     display: flex;
     justify-content: center;
-    overflow-x: hidden;
+    align-items: center;
+    font-family: Georgia, serif;
+    overflow: hidden;
 }
 
-/* Background hearts */
-.heart {
+/* Floating background hearts */
+.heart-bg {
     position: fixed;
     color: #ff4d88;
-    font-size: 30px; /* Bigger hearts */
-    animation: float 8s infinite ease-in-out;
-    opacity: 0.6;
+    font-size: 20px;
+    opacity: 0.5;
+    animation: float 10s linear infinite;
 }
 
 @keyframes float {
-    0% { transform: translateY(100vh) scale(1); }
-    100% { transform: translateY(-10vh) scale(1.3); }
+    from { transform: translateY(100vh); }
+    to { transform: translateY(-10vh); }
 }
 
-/* Letter box */
-.letter {
-    background: white;
-    max-width: 600px;
-    width: 100%;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-    font-size: 20px; /* Bigger for phone */
-    line-height: 1.8;
-    color: #333;
+/* Envelope */
+.envelope {
     position: relative;
-    z-index: 1;
+    width: 320px;
+    height: 220px;
+    background: #ff4d88;
+    cursor: pointer;
+    border-radius: 6px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.2);
 }
 
-p {
-    margin-bottom: 20px;
+/* Front text on envelope */
+.envelope::after {
+    content: "For My Darling";
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 45%;
+    left: 0;
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+/* Envelope flap */
+.flap {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 160px solid transparent;
+    border-right: 160px solid transparent;
+    border-bottom: 120px solid #ff80aa;
+    top: -120px;
+    left: 0;
+    transform-origin: bottom;
+    transition: 0.6s;
+}
+
+/* Letter */
+.letter {
+    position: absolute;
+    width: 90%;
+    max-height: 70vh;
+    background: white;
+    left: 5%;
+    bottom: 10px;
+    border-radius: 6px;
+    padding: 20px;
+    overflow-y: auto;
+    font-size: 18px;
+    line-height: 1.7;
+    transform: translateY(120%);
+    transition: 0.6s;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+
+/* Open state */
+.envelope.open .flap {
+    transform: rotateX(180deg);
+}
+
+.envelope.open .letter {
+    transform: translateY(-40px);
 }
 </style>
 </head>
 
-<body>
+<body onclick="toggleEnvelope()">
 
-<!-- Floating hearts -->
-<div class="heart" style="left:10%; animation-delay:0s;">❤️</div>
-<div class="heart" style="left:25%; animation-delay:2s;">❤️</div>
-<div class="heart" style="left:40%; animation-delay:4s;">❤️</div>
-<div class="heart" style="left:60%; animation-delay:1s;">❤️</div>
-<div class="heart" style="left:75%; animation-delay:3s;">❤️</div>
-<div class="heart" style="left:90%; animation-delay:5s;">❤️</div>
+<!-- Background hearts -->
+<div class="heart-bg" style="left:10%; animation-delay:0s;">❤️</div>
+<div class="heart-bg" style="left:30%; animation-delay:2s;">❤️</div>
+<div class="heart-bg" style="left:50%; animation-delay:4s;">❤️</div>
+<div class="heart-bg" style="left:70%; animation-delay:1s;">❤️</div>
+<div class="heart-bg" style="left:90%; animation-delay:3s;">❤️</div>
 
-<div class="letter">
+<div class="envelope" id="envelope">
+    <div class="flap"></div>
 
-<p>You’ve asked me numerous times why I love you and what makes you different from other guys, and after prolonging it for so long, now’s that time.</p>
+    <div class="letter">
+        <p>You’ve asked me numerous times why I love you and what makes you different from other guys, and after prolonging it for so long, now’s that time.</p>
 
-<p>One of the reasons why I love you is because you take time to actually listen when we talk. You make me feel seen, and heard. When I address certain habits that I don’t like, instead of coming up with excuses for them, you make an effort to change. I know that changing a certain mindset or habit that you’ve had for so long is hard and although we may have some setbacks I do appreciate your efforts to change especially the fact that you don’t just say you’re going to do better, you actually try. You respect me, don’t put me down, compliment me, and fill me with love. You’re reassuring and don’t leave any space for doubt.</p>
+        <p>One of the reasons why I love you is because you take time to actually listen when we talk. You make me feel seen, and heard. When I address certain habits that I don’t like, instead of coming up with excuses for them, you make an effort to change. I know that changing a certain mindset or habit that you’ve had for so long is hard and although we may have some setbacks I do appreciate your efforts to change especially the fact that you don’t just say you’re going to do better, you actually try. You respect me, don’t put me down, compliment me, and fill me with love. You’re reassuring and don’t leave any space for doubt.</p>
 
-<p>When I’m with you I’m no longer stressed or depressed, I feel happier, safe, and chosen. I find your consistency to be meaningful considering the fact that you’ve liked me so long and made it known.</p>
+        <p>When I’m with you I’m no longer stressed or depressed, I feel happier, safe, and chosen. I find your consistency to be meaningful considering the fact that you’ve liked me so long and made it known.</p>
 
-<p>One thing I really love about your character is your creativity when it comes to being cringy and corny even with the nicknames you give me like coconut locs, sugar dumpling, cherry blood blossom and all the other crazy names you come up with, is your way loving me and it means a lot to me. You are genuine about your feelings for me and you never fail to make that clear. Even with us being in a long distance relationship and you being so busy with work, you still make time for me even if that means losing sleep. You always text me when you wake up and if we haven’t talked during the day, you’d make time at night.</p>
+        <p>One thing I really love about your character is your creativity when it comes to being cringy and corny even with the nicknames you give me like coconut locs, sugar dumpling, cherry blood blossom and all the other crazy names you come up with, is your way loving me and it means a lot to me. You are genuine about your feelings for me and you never fail to make that clear. Even with us being in a long distance relationship and you being so busy with work, you still make time for me even if that means losing sleep. You always text me when you wake up and if we haven’t talked during the day, you’d make time at night.</p>
 
-<p>What makes you different from other men is that you’re not generic. When I ask you questions, you don’t respond vaguely rather, you’d go into detail about the whole shebang. You answer all of my random questions no matter how ridiculous they may be. You’re not someone that makes me uncomfortable and you don’t make every conversation we have sexual. There’s also this thing about timing with you that I still can’t figure out. Throwback to last year when I had thoughts about our relationship moving too fast, you messaged me asking if I felt as though the relationship was moving too fast or if it was at a reasonable pace for me. See now the fact that you asked that question the same time that I was thinking about it really caught me off guard and when I responded, instead of being weird about it, you decided become a lil philosopher with that “we gin walk from Alaska to Carmichael” analogy.</p>
+        <p>What makes you different from other men is that you’re not generic. When I ask you questions, you don’t respond vaguely rather, you’d go into detail about the whole shebang. You answer all of my random questions no matter how ridiculous they may be. You’re not someone that makes me uncomfortable and you don’t make every conversation we have sexual. There’s also this thing about timing with you that I still can’t figure out. Throwback to last year when I had thoughts about our relationship moving too fast, you messaged me asking if I felt as though the relationship was moving too fast or if it was at a reasonable pace for me. See now the fact that you asked that question the same time that I was thinking about it really caught me off guard and when I responded, instead of being weird about it, you decided become a lil philosopher with that “we gin walk from Alaska to Carmichael” analogy.</p>
 
-<p>I love that we can joke with each other, you wouldn’t be offended when I call you certain names or when we fake argue. I love how kind you are and how special you make me feel. I love every part of you, even the parts you used to be insecure about. None of those things change how I see you. Although society sometimes makes it seem weird for a tall girl and a not so tall guy to be together, I don’t see anything wrong with. As someone who hated being tall you’ve encouraged me to embrace my height instead of putting me down.</p>
+        <p>I love that we can joke with each other, you wouldn’t be offended when I call you certain names or when we fake argue. I love how kind you are and how special you make me feel. I love every part of you, even the parts you used to be insecure about. None of those things change how I see you. Although society sometimes makes it seem weird for a tall girl and a not so tall guy to be together, I don’t see anything wrong with. As someone who hated being tall you’ve encouraged me to embrace my height instead of putting me down.</p>
 
-<p>You’ve helped me in my decision making since being college. I am not who I once was when I first came to central, I don’t go to parties anymore or hang around people that encourage bad habits. Since then I’ve spent more time focusing on myself, my space, and our time together. We support each other, and I know that when something’s bothering me, I can come to you. Even if it’s hard for me to open up immediately, you’re patient and wait until I’m ready.</p>
+        <p>You’ve helped me in my decision making since being college. I am not who I once was when I first came to central, I don’t go to parties anymore or hang around people that encourage bad habits. Since then I’ve spent more time focusing on myself, my space, and our time together. We support each other, and I know that when something’s bothering me, I can come to you. Even if it’s hard for me to open up immediately, you’re patient and wait until I’m ready.</p>
 
-<p>I also want you to know that I do notice everything. The small changes, effort, and even the way your energy shifts when something matters to me. I see it and I know I don’t always give flowers when it’s due but I do appreciate it.</p>
+        <p>I also want you to know that I do notice everything. The small changes, effort, and even the way your energy shifts when something matters to me. I see it and I know I don’t always give flowers when it’s due but I do appreciate it.</p>
 
-<p>Cheers to our first Valentine’s Day and I pray we have many more.</p>
+        <p>Cheers to our first Valentine’s Day and I pray we have many more.</p>
 
-<p>I love you, my gremlin. ❤️</p>
-
+        <p>I love you, my gremlin. ❤️</p>
+    </div>
 </div>
+
+<script>
+function toggleEnvelope() {
+    document.getElementById("envelope").classList.toggle("open");
+}
+</script>
 
 </body>
 </html>
